--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "webui-app",
   "version": "0.1.0",
   "private": false,
-  "homepage": "https://owicky.github.io/faasr-workflow-builder",
+  "homepage": "https://faasr.io/FaaSr-workflow-builder/",
   "dependencies": {
     "@dagrejs/dagre": "^1.1.4",
     "@testing-library/dom": "^10.4.0",
@@ -16,7 +16,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-select": "^5.10.2",
     "util": "^0.12.5",
     "web-vitals": "^2.1.4"
